Added comment to font size root

--- a/scss/reset.scss
+++ b/scss/reset.scss
@@ -36,6 +36,7 @@ table {
 
 // personalizando e setando padrões
 :root {
+    // base 10px
     font-size: 62.5%;
     scroll-behavior: smooth;
     // remove o atraso de clique no smartphone windows
