--- a/scss/reset.scss
+++ b/scss/reset.scss
@@ -1,3 +1,9 @@
+/* 
+    CSS Reset by @Leo-Henrique | https://github.com/Leo-Henrique/css-reset
+
+    Inspired by meyerweb reset | https://meyerweb.com/eric/tools/css/reset/
+*/
+
 // ajustes no meyerweb reset
 *,
 *::after,
