--- a/reset.css
+++ b/reset.css
@@ -1,3 +1,8 @@
+/* 
+    CSS Reset by @Leo-Henrique | https://github.com/Leo-Henrique/css-reset
+
+    Inspired by meyerweb reset | https://meyerweb.com/eric/tools/css/reset/
+*/
 *,
 *::after,
 *::before {
