--- a/reset.css
+++ b/reset.css
@@ -3,9 +3,22 @@
 
     Inspired by meyerweb reset | https://meyerweb.com/eric/tools/css/reset/
 */
-*,
-*::after,
-*::before {
+*, *::after, *::before, a, abbr, address,
+article, aside, audio, b, bdi, bdo,
+blockquote, body, br, button, canvas,
+caption, cite, code, col, colgroup, data,
+datalist, dd, del, details, dfn, dialog, div,
+dl, dt, em, embed, fieldset, figcaption,
+figure, footer, form, h1, h2, h3, h4, h5,
+h6, header, hgroup, hr, html, i, iframe,
+img, input, ins, kbd, label, legend, li,
+main, mark, menu, meter, nav, noscript,
+object, ol, optgroup, option, output, p,
+pre, progress, q, rp, rt, ruby, s, samp,
+section, select, slot, small, span, strong,
+sub, summary, sup, table, tbody, td,
+template, textarea, tfoot, th, thead,
+time, tr, u, ul, var, video, wbr {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
