--- a/scss/lib/_patterns.scss
+++ b/scss/lib/_patterns.scss
@@ -20,6 +20,13 @@ input, select, textarea {
     -moz-appearance: none;
     appearance: none;
 }
+// breakpoint used by Bootstrap
+@media (max-width: 575.98px) {
+    // remove zoom when field is focused on safari for mobile
+    datalist, input, select, textarea {
+        font-size: 16px;
+    }
+}
 a, abbr[title] {
     text-decoration: none;
 }
